random_field/jitfailure-dolfin_expression_04854d22e83e33fe2a71661ce4fef440/error.log
/var/folders/br/kqx4wrcd4yn6zmk5jlrz9r7c0000gn/T/tmpxe446_5e/dolfin_expression_04854d22e83e33fe2a71661ce4fef440.cpp:64:30: error: invalid operands to binary expression ('const double' and 'const double')
          values[0] = w_j /(j^alpha)*sin(j*pi*x[0]);
                            ~^~~~~~
1 error generated.
